--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="description" content="HTML5VisualizationPlayer">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML5 可视化音乐播放器</title>
+        <title>电台在线</title>
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/player.css">
         <link rel="Shortcut Icon" href="images/icon.png">
