--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             },
             playList: [//播放列表
                 {
-                    title: "Kandy",//音乐标题
+                    title: "音乐电台",//音乐标题
                     album: "",//所属专辑
                     artist: "",//艺术家
-                    mp3: "music/Kandy.mp3",//音乐路径
+                    mp3: "https://lhttp.qingting.fm/live/1260/64k.mp3",//音乐路径
                 },
                 {
                     title: "Paper Gangsta",//音乐标题
